--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -108,7 +108,7 @@ html{
     z-index: -9000;
 }
 
-#search-btn{
+#search-button{
     color: var(--text-light);
     padding: 5px 10px;
     margin: 2px;
@@ -121,7 +121,7 @@ html{
     top: 0;
 }
 
-#search-btn:hover{
+#search-button:hover{
     color: var(--text-light);
     margin: 0px;
     padding: 7px 12px;
