--- a/views/index.ejs
+++ b/views/index.ejs
@@ -263,11 +263,15 @@
         </div>
       </main>
     </div>
+    <script type="text/javascript" src="/app.js"></script>
+    <input type="button" value="Submit" onclick="getData('plant')" />
     <footer></footer>
 
     <script src="https://api.mqcdn.com/sdk/place-search-js/v1.0.0/place-search.js"></script>
+    <script id="data" type="application/json" src="data.json"></script>
 
     <script src="js/script.js"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   </body>
 </html>
