fixed transfer bugs

--- a/views/index.html
+++ b/views/index.html
@@ -5,8 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Delicious+Handrawn&family=Fruktur&family=Gochi+Hand&family=Lily+Script+One&family=Montserrat:wght@500&display=swap" 
 rel="stylesheet">
@@ -25,7 +23,7 @@ rel="stylesheet">
     />
 
 
-    <link rel="stylesheet" href="./assets/CSS/style.css" />
+    <link rel="stylesheet" href="/public/css/style.css" />
 
 
     <title>Document</title>
@@ -316,7 +314,7 @@ rel="stylesheet">
 
     <footer></footer>
 
-    <script src="https://api.mqcdn.com/sdk/place-search-js/v1.0.0/place-search.js"></script>
+    <!-- <script src="https://api.mqcdn.com/sdk/place-search-js/v1.0.0/place-search.js"></script> -->
 
 
     <script src="./assets/JS/script.js"></script>
