--- a/public/css/style.css
+++ b/public/css/style.css
@@ -130,7 +130,7 @@ body {
 
 
 #hero {
-    background-image: url(./images/o0i97sjusso11.jpg);
+    background-image: url(/public/img/background.jpg);
     height: 100vh;
     max-height: 100vh;
     width: 100vw;
@@ -139,12 +139,8 @@ body {
     left: 0;
     z-index: -25;
 }
-<<<<<<< HEAD
-#search-button {
-=======
 
-#search-button{
->>>>>>> dev
+#search-button {
     color: var(--text-light);
     padding: 5px 10px;
     margin: 2px;
@@ -156,12 +152,8 @@ body {
     position: relative;
     top: 0;
 }
-<<<<<<< HEAD
-#search-button:hover {
-=======
 
-#search-button:hover{
->>>>>>> dev
+#search-button:hover {
     color: var(--text-light);
     margin: 0px;
     padding: 7px 12px;
