--- a/views/index.html
+++ b/views/index.html
@@ -99,7 +99,7 @@ rel="stylesheet">
                       placeholder="park name"
                       />
                     </form>
-                    <button class="" id="search-button">Search</button>
+                    <button class="" id="search-button2">Search</button>
                   </div>
                   <div class="history"></div>
                 </div>
@@ -159,13 +159,13 @@ rel="stylesheet">
       
       <!-- example card -->
       
-      <div class="row hide" id="results-page">
+      <div class="row" id="results-page">
       
         
                 <div class="col s6 m4 xl2 plant-card">
                   <div class="card hoverable rounded">
                     <div class="card-image rounded">
-                      <img src="./assets/CSS/images/o0i97sjusso11.jpg" />
+                      <img src="/public/img/background.jpg" />
                     </div>
                     <div class="card-content">
                       <span class="card-title truncate">Common name</span>
@@ -177,7 +177,7 @@ rel="stylesheet">
                 <div class="col s6 m4 xl2 plant-card">
                   <div class="card hoverable rounded">
                     <div class="card-image rounded">
-                      <img src="./assets/CSS/images/o0i97sjusso11.jpg" />
+                      <img src="/public/img/background.jpg" />
                     </div>
                     <div class="card-content">
                       <span class="card-title truncate">Common name</span>
@@ -189,7 +189,7 @@ rel="stylesheet">
                 <div class="col s6 m4 xl2 plant-card">
                   <div class="card hoverable rounded">
                     <div class="card-image rounded">
-                      <img src="./assets/CSS/images/o0i97sjusso11.jpg" />
+                      <img src="/public/img/background.jpg" />
                     </div>
                     <div class="card-content">
                       <span class="card-title truncate">Common name</span>
@@ -201,7 +201,7 @@ rel="stylesheet">
                 <div class="col s6 m4 xl2 plant-card">
                   <div class="card hoverable rounded">
                     <div class="card-image rounded">
-                      <img src="./assets/CSS/images/o0i97sjusso11.jpg" />
+                      <img src="/public/img/background.jpg" />
                     </div>
                     <div class="card-content">
                       <span class="card-title truncate">Common name</span>
@@ -213,7 +213,7 @@ rel="stylesheet">
                 <div class="col s6 m4 xl2 plant-card">
                   <div class="card hoverable rounded">
                     <div class="card-image rounded">
-                      <img src="./assets/CSS/images/o0i97sjusso11.jpg" />
+                      <img src="/public/img/background.jpg" />
                     </div>
                     <div class="card-content">
                       <span class="card-title truncate">Common name</span>
@@ -224,8 +224,8 @@ rel="stylesheet">
       
                 <div class="col s6 m4 xl2 plant-card">
                   <div class="card hoverable rounded">
-                    <div class="card-image rounded">
-                      <img src="./assets/CSS/images/o0i97sjusso11.jpg" />
+                    <div class="card-image rounded plant-image">
+                      <img src="/public/img/background.jpg" />
                     </div>
                     <div class="card-content">
                       <span class="card-title truncate">Common name</span>
@@ -236,8 +236,8 @@ rel="stylesheet">
       
                 <div class="col s6 m4 xl2 plant-card">
                   <div class="card hoverable rounded">
-                    <div class="card-image rounded">
-                      <img src="./assets/CSS/images/o0i97sjusso11.jpg" />
+                    <div class="card-image rounded overflow">
+                      <img src="/public/img/background.jpg" />
                     </div>
                     <div class="card-content">
                       <span class="card-title truncate">Common name</span>
@@ -317,7 +317,7 @@ rel="stylesheet">
     <!-- <script src="https://api.mqcdn.com/sdk/place-search-js/v1.0.0/place-search.js"></script> -->
 
 
-    <script src="./assets/JS/script.js"></script>
+    <script src="/public/js/script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <!-- <script src="./assets/style.css"></script> -->
 
