--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,7 +6,6 @@
     --text-dark: rgb(0, 61, 13);
     --body-background: rgb(247, 236, 204);
 }
-
 html {
     scroll-behavior: smooth;
 }
@@ -32,9 +31,34 @@ body {
     align-items: center;
     position: relative;
 }
+.overflow{
+    overflow: hidden;
+}
 .h2 {
     font-size: 20px;
     color: rgb(0, 85, 0);
+}
+.plant-card{
+    min-height: 300px;
+    max-height: 300px;
+    overflow: hidden;
+    z-index: -2;
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: flex-end;
+}
+.plant-image > img{
+    overflow: hidden;
+    z-index: 0;
+    position: relative;
+    display: flex;
+}
+.card-content{
+    z-index: 1;
+    background-color: white;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
 }
 .find-plants-container {
     width: 100vw;
@@ -63,7 +87,6 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
 }
     .search-modal{
         background-color: var(--color-light);
@@ -124,13 +147,9 @@ body {
                 align-items: center;
             }
             .history{
-
             }
-
-
-
 #hero {
-    background-image: url(./images/o0i97sjusso11.jpg);
+    background-image: url(/public/img/background.jpg);
     height: 100vh;
     max-height: 100vh;
     width: 100vw;
@@ -139,10 +158,7 @@ body {
     left: 0;
     z-index: -25;
 }
-
-
-#search-button{
-
+#search-button {
     color: var(--text-light);
     padding: 5px 10px;
     margin: 2px;
@@ -154,9 +170,7 @@ body {
     position: relative;
     top: 0;
 }
-
-#search-button:hover{
-
+#search-button:hover {
     color: var(--text-light);
     margin: 0px;
     padding: 7px 12px;
@@ -167,7 +181,29 @@ body {
     box-shadow: rgba(0, 0, 0, 0.15) 0 2px 2px 2px;
     top: -2px;
 }
-
+#search-button2 {
+    color: var(--text-light);
+    padding: 5px 10px;
+    margin: 2px;
+    font-size: 20px;
+    border-radius: 20px;
+    border: none;
+    background: linear-gradient(rgb(0, 150, 0) 0, rgb(0, 85, 0) 100%);
+    transition: ease .2s;
+    position: relative;
+    top: 0;
+}
+#search-button2:hover {
+    color: var(--text-light);
+    margin: 0px;
+    padding: 7px 12px;
+    font-size: 20px;
+    border-radius: 20px;
+    border: none;
+    background: linear-gradient(rgb(0, 167, 0) 0, rgb(0, 110, 0) 100%);
+    box-shadow: rgba(0, 0, 0, 0.15) 0 2px 2px 2px;
+    top: -2px;
+}
 .page-title{
     font-size: 40px;
     left: 50px;
@@ -213,7 +249,6 @@ body {
                 flex-direction: column;
                 justify-content: space-around;
                 align-items: flex-start;
-
             }
                 .common-name {
                     padding-top: 5px;
