--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,33 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Fruktur&family=Lily+Script+One&family=Montserrat:wght@500&display=swap"
-      rel="stylesheet"
-    />
-
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
-    />
-
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Delicious+Handrawn&family=Fruktur&family=Gochi+Hand&family=Lily+Script+One&family=Montserrat:wght@500&display=swap"
+rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+rel="stylesheet">
+    <!-- materialize css -->
     <link
       type="text/css"
       rel="stylesheet"
       href="https://api.mqcdn.com/sdk/place-search-js/v1.0.0/place-search.css"
     />
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Document</title>
   </head>
-
   <body>
     <header>
-      <div class="navbar-fixed">
+      <div class="navbar-fixed row">
         <nav>
           <div class="nav-wrapper green darken-1">
-            <a href="" class="brand-logo left">Plants in Parks</a>
+            <a href="" class="brand-logo left page-title">Plants in Parks</a>
             <ul id="nav-mobile" class="right">
               <li><a href="#about">About</a></li>
               <li><a href="">Github</a></li>
@@ -41,237 +38,102 @@
         </nav>
       </div>
     </header>
-
-    <div class="">
+    <main>
       <!-- Hero section -->
-      <main>
-        <div class="responsive-img" id="hero"></div>
-
-        <!-- card in middle with form for allergy maps -->
-        <div class="find-plants-container">
-          <div class="find-plants hoverable">
-            <div class="h2">Enter a National Park Here:</div>
-            <form class="" id="" action="">
-              <input
-                id="place-search-input"
-                type="text"
-                placeholder="park name"
-              />
-            </form>
-            <button class="" id="search-button">Search</button>
-          </div>
+      <div class="responsive-img" id="hero"></div>
+      <!-- card in middle with search form -->
+      <div class="find-plants-container">
+        <div class="find-plants hoverable">
+          <div class="h2">Enter a National Park Here:</div>
+          <form class="" id="" action="">
+            <input
+              id="place-search-input"
+              type="text"
+              placeholder="park name"
+            />
+          </form>
+          <button class="" id="search-button">Search</button>
         </div>
-
-        <div id="modal1" class="modal">
-          <div class="modal-content">
-            <h4>Modal Header</h4>
-            <p>A bunch of text</p>
-          </div>
-          <div class="modal-footer">
-            <a href="#!" class="modal-close waves-effect waves-green btn-flat"
-              >Agree</a
-            >
-          </div>
+      </div>
+      <!-- modals n things -->
+      <div class="">
+        <!-- modal button -->
+        <div class="fixed-action-btn modal-search-button hide">
+          <a class="btn-floating btn-large blue">
+            <i class="large material-icons">search</i>
+          </a>
         </div>
-
+        <!-- search modal -->
+        <div class="flex-bullseye modal-background qmodal hide" id="search-modal">
+          <div class="search-modal-container">
+            <div class="search-modal">
+              <div class="search-modal-banner">
+                <div class="h2 search-modal-title">Enter a National Park Here:</div>
+                <div class="close-btn-small" id="close-button">+</div>
         <!-- example card -->
-
-        <div class="row hide" id="results-page">
-          <div class="col s6 m4 xl2 plant-card">
-            <div class="card hoverable rounded">
-              <div class="card-image rounded">
-                <img src="img/background.jpg" />
-              </div>
-              <div class="card-content">
-                <span class="card-title truncate">Common name</span>
-                <p class="truncate">Scientific name</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col s6 m4 xl2 plant-card">
-            <div class="card hoverable rounded">
-              <div class="card-image rounded">
-                <img src="img/background.jpg" />
-              </div>
-              <div class="card-content">
-                <span class="card-title truncate">Common name</span>
-                <p class="truncate">Scientific name</p>
+      </div>
+      <div class="search-modal-body">
+        <div class="search-form">
+                  <form class="" id="" action="">
+                    <input
+                      id="place-search-input"
+                      type="text"
+                      placeholder="park name"
+                      />
+                    </form>
+                    <button class="" id="search-button2">Search</button>
+                  </div>
+                  <div class="history"></div>
+                </div>
               </div>
             </div>
-          </div>
-
-          <div class="col s6 m4 xl2 plant-card">
-            <div class="card hoverable rounded">
-              <div class="card-image rounded">
-                <img src="img/background.jpg" />
+      <!-- plant info modal -->
+        <!-- modal background -->
+        <div class="flex-bullseye modal-background qmodal hide" id="plant-info-modal">
+          <!-- modal window -->
+          <div class="modal-house">
+            <div class="modal-banner">
+              <div class="modal-title">
+                <div class="common-name">Common</div>
+                <div class="scientific">Scientific scientificus</div>
               </div>
-              <div class="card-content">
-                <span class="card-title truncate">Common name</span>
-                <p class="truncate">Scientific name</p>
-              </div>
+              <div class="close-btn" id="close-button">+</div>
             </div>
-          </div>
-
-          <div class="col s6 m4 xl2 plant-card">
-            <div class="card hoverable rounded">
-              <div class="card-image rounded">
-                <img src="img/background.jpg" />
+            <div class="modal-content">
+              <div class="modal-column-img">
+                <img src="img/background.jpg" alt="" />
               </div>
-              <div class="card-content">
-                <span class="card-title truncate">Common name</span>
-                <p class="truncate">Scientific name</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col s6 m4 xl2 plant-card">
-            <div class="card hoverable rounded">
-              <div class="card-image rounded">
-                <img src="img/background.jpg" />
-              </div>
-              <div class="card-content">
-                <span class="card-title truncate">Common name</span>
-                <p class="truncate">Scientific name</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col s6 m4 xl2 plant-card">
-            <div class="card hoverable rounded">
-              <div class="card-image rounded">
-                <img src="img/background.jpg" />
-              </div>
-              <div class="card-content">
-                <span class="card-title truncate">Common name</span>
-                <p class="truncate">Scientific name</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col s6 m4 xl2 plant-card">
-            <div class="card hoverable rounded">
-              <div class="card-image rounded">
-                <img src="img/background.jpg" />
-              </div>
-              <div class="card-content">
-                <span class="card-title truncate">Common name</span>
-                <p class="truncate">Scientific name</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col s6 m4 xl2 plant-card">
-            <div class="card hoverable rounded">
-              <div class="card-image rounded">
-                <img src="img/background.jpg" />
-              </div>
-              <div class="card-content">
-                <span class="card-title truncate">Common name</span>
-                <p class="truncate">Scientific name</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col s6 m4 xl2 plant-card">
-            <div class="card hoverable rounded">
-              <div class="card-image rounded">
-                <img src="img/background.jpg" />
-              </div>
-              <div class="card-content">
-                <span class="card-title truncate">Common name</span>
-                <p class="truncate">Scientific name</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col s6 m4 xl2 plant-card">
-            <div class="card hoverable rounded">
-              <div class="card-image rounded">
-                <img src="img/background.jpg" />
-              </div>
-              <div class="card-content">
-                <span class="card-title truncate">Common name</span>
-                <p class="truncate">Scientific name</p>
+              <div class="modal-column-text">
+                <div class="list-row-light">
+                  <div class="column-text-list1">Taxonomy</div>
+                  <div class="column-text-list2">taxtax</div>
+                </div>
+                <div class="list-row-dark">
+                  <div class="column-text-list1">Habitat</div>
+                  <div class="column-text-list2">chuck e cheese</div>
+                </div>
+                <div class="list-row-light">
+                  <div class="column-text-list1">Edibility</div>
+                  <div class="column-text-list2">this will kill you</div>
+                </div>
+                <div class="list-row-dark bottom">
+                  <div class="column-text-list1">Locations</div>
+                  <div class="column-text-list2">
+                    your house, my house, jail, quiznos
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
-
-        <!-- explanation -->
-        <div id="about">
-          <div class="sidebar hide">About</div>
-          <div class="content hide">
-            magnam, illum aliquam saepe! Natus, animi rem! Dolore vel inventore
-            quisquam voluptatem optio neque illum ut modi officiis, tenetur odit
-            earum exercitationem obcaecati a ipsam, delectus explicabo, ad qui
-            velit in laudantium, cum harum? Dolorem et eius aperiam veritatis
-            voluptate voluptates praesentium soluta eaque? Aspernatur obcaecati
-            delectus quo laboriosam explicabo et nostrum minus officiis ducimus,
-            voluptatem accusamus non provident corrupti rerum error quasi
-            architecto maiores eius! Optio voluptatum inventore a consequuntur
-            aliquid excepturi voluptate? Aliquam, dicta quisquam? Voluptatibus
-            dolorem architecto soluta fugit eveniet necessitatibus laborum
-            perferendis, autem, porro natus dolor fugiat sapiente id dolore amet
-            consectetur cum, fuga a eligendi iste deleniti suscipit.
-            Perferendis. Culpa impedit quia harum dolore hic unde est possimus
-            fugiat vel quibusdam alias vero aut, dignissimos recusandae quam
-            reiciendis? Laudantium, autem quos? Doloremque aperiam repudiandae
-            tempore veniam esse dolorum ut. Nemo suscipit nam ipsa nulla
-            nostrum! Enim ratione eius quidem quas repellendus velit numquam,
-            esse nobis. Quae, temporibus rem quas expedita dicta nulla ad
-            sapiente! Deserunt earum adipisci reprehenderit optio. Ipsa ipsam
-            vel provident perferendis atque! Laboriosam cupiditate sed rem
-            aliquid quam ut, inventore dignissimos tenetur minus? Dignissimos
-            minima aut maxime quae. Quo aspernatur, voluptas accusantium sunt in
-            quisquam, libero ullam tempora iste earum provident? Quos autem iste
-            magnam excepturi nisi quis tempore commodi sunt assumenda. Dolores
-            et animi ipsam quasi eligendi dolore, omnis quae amet suscipit qui,
-            ipsum architecto distinctio eius alias fugit reiciendis tenetur,
-            quam voluptatem debitis? Consectetur adipisci ab veritatis,
-            similique molestias natus Dolor modi quae excepturi expedita impedit
-            eaque, tempora corrupti blanditiis. Odit beatae error aliquam.
-            Deserunt ipsum quos incidunt ut totam consequuntur pariatur porro
-            iste quidem omnis rem est quo autem minus expedita, corrupti enim
-            asperiores. Voluptate aperiam maiores quibusdam, quae ratione ab
-            inventore alias. Officiis fuga veritatis perferendis repellat
-            doloribus ab iusto unde excepturi sint ad praesentium aspernatur,
-            magni earum doloremque quo maiores id blanditiis, magnam natus
-            aperiam? Laudantium deleniti impedit soluta eos incidunt. Iure
-            aperiam neque fugit dolor ducimus ipsum at nisi, voluptatibus nulla,
-            iusto quidem mollitia eaque velit modi facere in repellendus
-            accusantium quam odit animi esse eum delectus. Ut, repudiandae
-            totam? Quasi provident eaque eum dolore, sequi reprehenderit numquam
-            corporis illum sunt earum odio error blanditiis iusto accusamus
-            possimus eius reiciendis quos, qui molestiae quo pariatur!
-            Laudantium id quod expedita ratione! Voluptatem libero accusantium
-            adipisci dignissimos impedit at quod doloremque eius ipsa similique
-            provident, nobis architecto quasi expedita eum animi ut nemo dolores
-            magni beatae sunt amet odit veniam repellendus. Temporibus. Commodi,
-            possimus molestias blanditiis libero ratione placeat expedita odio
-            sapiente tempore ullam quis atque maxime asperiores dicta voluptas,
-            minus ab, quaerat accusamus error. Expedita provident a numquam
-            blanditiis dolorum atque? Distinctio tenetur minus libero aliquid
-            perferendis commodi amet optio odio nam modi provident dicta tempore
-            explicabo assumenda odit, officia quae ipsa? Vero natus, aliquam
-            tempora recusandae magnam ducimus soluta qui. Doloribus eius officia
-            animi hic, fugiat nobis natus, nemo expedita labore perferendis
-            voluptates cumque ea tempora dolore illo. Reprehenderit perspiciatis
-            illum laboriosam doloremque voluptatem repellat ipsam hic quia quis.
-            Facilis!
-          </div>
-        </div>
-      </main>
-    </div>
-    <script type="text/javascript" src="/app.js"></script>
-    <input type="button" value="Submit" onclick="getData('plant')" />
+      </div>
+      <!-- example card -->
+      <div class="row" id="results-page">
+    </main>
     <footer></footer>
-
-    <script src="https://api.mqcdn.com/sdk/place-search-js/v1.0.0/place-search.js"></script>
-    <script id="data" type="application/json" src="data.json"></script>
-
+    <!-- <script src="https://api.mqcdn.com/sdk/place-search-js/v1.0.0/place-search.js"></script> -->
     <script src="js/script.js"></script>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <!-- <script src="./assets/style.css"></script> -->
   </body>
 </html>
