--- a/views/index.html
+++ b/views/index.html
@@ -5,15 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Delicious+Handrawn&family=Fruktur&family=Gochi+Hand&family=Lily+Script+One&family=Montserrat:wght@500&display=swap" 
+    <link href="https://fonts.googleapis.com/css2?family=Delicious+Handrawn&family=Fruktur&family=Gochi+Hand&family=Lily+Script+One&family=Montserrat:wght@500&display=swap"
 rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
 rel="stylesheet">
     <!-- materialize css -->
-
     <link
       type="text/css"
       rel="stylesheet"
@@ -23,14 +20,9 @@ rel="stylesheet">
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
     />
-
-
-    <link rel="stylesheet" href="./assets/CSS/style.css" />
-
-
+    <link rel="stylesheet" href="/public/css/style.css" />
     <title>Document</title>
   </head>
-
   <body>
     <header>
       <div class="navbar-fixed row">
@@ -46,12 +38,9 @@ rel="stylesheet">
         </nav>
       </div>
     </header>
-
-
     <main>
       <!-- Hero section -->
       <div class="responsive-img" id="hero"></div>
-
       <!-- card in middle with search form -->
       <div class="find-plants-container">
         <div class="find-plants hoverable">
@@ -66,9 +55,6 @@ rel="stylesheet">
           <button class="" id="search-button">Search</button>
         </div>
       </div>
-
-
-      
       <!-- modals n things -->
       <div class="">
         <!-- modal button -->
@@ -77,9 +63,6 @@ rel="stylesheet">
             <i class="large material-icons">search</i>
           </a>
         </div>
-
-
-
         <!-- search modal -->
         <div class="flex-bullseye modal-background qmodal hide" id="search-modal">
           <div class="search-modal-container">
@@ -87,10 +70,7 @@ rel="stylesheet">
               <div class="search-modal-banner">
                 <div class="h2 search-modal-title">Enter a National Park Here:</div>
                 <div class="close-btn-small" id="close-button">+</div>
-
         <!-- example card -->
-
-        
       </div>
       <div class="search-modal-body">
         <div class="search-form">
@@ -101,22 +81,15 @@ rel="stylesheet">
                       placeholder="park name"
                       />
                     </form>
-                    <button class="" id="search-button">Search</button>
+                    <button class="" id="search-button2">Search</button>
                   </div>
                   <div class="history"></div>
                 </div>
               </div>
             </div>
-            
-            
-            
-            
-            
-
       <!-- plant info modal -->
-
         <!-- modal background -->
-        <div class="flex-bullseye modal-background qmodal hide" id="plant-info-modal"> 
+        <div class="flex-bullseye modal-background qmodal hide" id="plant-info-modal">
           <!-- modal window -->
           <div class="modal-house">
             <div class="modal-banner">
@@ -130,23 +103,19 @@ rel="stylesheet">
               <div class="modal-column-img">
                 <img src="./assets/CSS/images/o0i97sjusso11.jpg" alt="" />
               </div>
-
               <div class="modal-column-text">
                 <div class="list-row-light">
                   <div class="column-text-list1">Taxonomy</div>
                   <div class="column-text-list2">taxtax</div>
                 </div>
-
                 <div class="list-row-dark">
                   <div class="column-text-list1">Habitat</div>
                   <div class="column-text-list2">chuck e cheese</div>
                 </div>
-
                 <div class="list-row-light">
                   <div class="column-text-list1">Edibility</div>
                   <div class="column-text-list2">this will kill you</div>
                 </div>
-
                 <div class="list-row-dark bottom">
                   <div class="column-text-list1">Locations</div>
                   <div class="column-text-list2">
@@ -158,171 +127,13 @@ rel="stylesheet">
           </div>
         </div>
       </div>
-      
       <!-- example card -->
-      
-      <div class="row hide" id="results-page">
-      
-        
-                <div class="col s6 m4 xl2 plant-card">
-                  <div class="card hoverable rounded">
-                    <div class="card-image rounded">
-                      <img src="./assets/CSS/images/o0i97sjusso11.jpg" />
-                    </div>
-                    <div class="card-content">
-                      <span class="card-title truncate">Common name</span>
-                      <p class="truncate">Scientific name</p>
-                    </div>
-                  </div>
-                </div>
-      
-                <div class="col s6 m4 xl2 plant-card">
-                  <div class="card hoverable rounded">
-                    <div class="card-image rounded">
-                      <img src="./assets/CSS/images/o0i97sjusso11.jpg" />
-                    </div>
-                    <div class="card-content">
-                      <span class="card-title truncate">Common name</span>
-                      <p class="truncate">Scientific name</p>
-                    </div>
-                  </div>
-                </div>
-      
-                <div class="col s6 m4 xl2 plant-card">
-                  <div class="card hoverable rounded">
-                    <div class="card-image rounded">
-                      <img src="./assets/CSS/images/o0i97sjusso11.jpg" />
-                    </div>
-                    <div class="card-content">
-                      <span class="card-title truncate">Common name</span>
-                      <p class="truncate">Scientific name</p>
-                    </div>
-                  </div>
-                </div>
-      
-                <div class="col s6 m4 xl2 plant-card">
-                  <div class="card hoverable rounded">
-                    <div class="card-image rounded">
-                      <img src="./assets/CSS/images/o0i97sjusso11.jpg" />
-                    </div>
-                    <div class="card-content">
-                      <span class="card-title truncate">Common name</span>
-                      <p class="truncate">Scientific name</p>
-                    </div>
-                  </div>
-                </div>
-      
-                <div class="col s6 m4 xl2 plant-card">
-                  <div class="card hoverable rounded">
-                    <div class="card-image rounded">
-                      <img src="./assets/CSS/images/o0i97sjusso11.jpg" />
-                    </div>
-                    <div class="card-content">
-                      <span class="card-title truncate">Common name</span>
-                      <p class="truncate">Scientific name</p>
-                    </div>
-                  </div>
-                </div>
-      
-                <div class="col s6 m4 xl2 plant-card">
-                  <div class="card hoverable rounded">
-                    <div class="card-image rounded">
-                      <img src="./assets/CSS/images/o0i97sjusso11.jpg" />
-                    </div>
-                    <div class="card-content">
-                      <span class="card-title truncate">Common name</span>
-                      <p class="truncate">Scientific name</p>
-                    </div>
-                  </div>
-                </div>
-      
-                <div class="col s6 m4 xl2 plant-card">
-                  <div class="card hoverable rounded">
-                    <div class="card-image rounded">
-                      <img src="./assets/CSS/images/o0i97sjusso11.jpg" />
-                    </div>
-                    <div class="card-content">
-                      <span class="card-title truncate">Common name</span>
-                      <p class="truncate">Scientific name</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-      <!-- explanation -->
-      <!-- <div id="about">
-          <div class="sidebar hide">About</div>
-          <div class="content hide">
-            magnam, illum aliquam saepe! Natus, animi rem! Dolore vel inventore
-            quisquam voluptatem optio neque illum ut modi officiis, tenetur odit
-            earum exercitationem obcaecati a ipsam, delectus explicabo, ad qui
-            velit in laudantium, cum harum? Dolorem et eius aperiam veritatis
-            voluptate voluptates praesentium soluta eaque? Aspernatur obcaecati
-            delectus quo laboriosam explicabo et nostrum minus officiis ducimus,
-            voluptatem accusamus non provident corrupti rerum error quasi
-            architecto maiores eius! Optio voluptatum inventore a consequuntur
-            aliquid excepturi voluptate? Aliquam, dicta quisquam? Voluptatibus
-            dolorem architecto soluta fugit eveniet necessitatibus laborum
-            perferendis, autem, porro natus dolor fugiat sapiente id dolore amet
-            consectetur cum, fuga a eligendi iste deleniti suscipit.
-            Perferendis. Culpa impedit quia harum dolore hic unde est possimus
-            fugiat vel quibusdam alias vero aut, dignissimos recusandae quam
-            reiciendis? Laudantium, autem quos? Doloremque aperiam repudiandae
-            tempore veniam esse dolorum ut. Nemo suscipit nam ipsa nulla
-            nostrum! Enim ratione eius quidem quas repellendus velit numquam,
-            esse nobis. Quae, temporibus rem quas expedita dicta nulla ad
-            sapiente! Deserunt earum adipisci reprehenderit optio. Ipsa ipsam
-            vel provident perferendis atque! Laboriosam cupiditate sed rem
-            aliquid quam ut, inventore dignissimos tenetur minus? Dignissimos
-            minima aut maxime quae. Quo aspernatur, voluptas accusantium sunt in
-            quisquam, libero ullam tempora iste earum provident? Quos autem iste
-            magnam excepturi nisi quis tempore commodi sunt assumenda. Dolores
-            et animi ipsam quasi eligendi dolore, omnis quae amet suscipit qui,
-            ipsum architecto distinctio eius alias fugit reiciendis tenetur,
-            quam voluptatem debitis? Consectetur adipisci ab veritatis,
-            similique molestias natus Dolor modi quae excepturi expedita impedit
-            eaque, tempora corrupti blanditiis. Odit beatae error aliquam.
-            Deserunt ipsum quos incidunt ut totam consequuntur pariatur porro
-            iste quidem omnis rem est quo autem minus expedita, corrupti enim
-            asperiores. Voluptate aperiam maiores quibusdam, quae ratione ab
-            inventore alias. Officiis fuga veritatis perferendis repellat
-            doloribus ab iusto unde excepturi sint ad praesentium aspernatur,
-            magni earum doloremque quo maiores id blanditiis, magnam natus
-            aperiam? Laudantium deleniti impedit soluta eos incidunt. Iure
-            aperiam neque fugit dolor ducimus ipsum at nisi, voluptatibus nulla,
-            iusto quidem mollitia eaque velit modi facere in repellendus
-            accusantium quam odit animi esse eum delectus. Ut, repudiandae
-            totam? Quasi provident eaque eum dolore, sequi reprehenderit numquam
-            corporis illum sunt earum odio error blanditiis iusto accusamus
-            possimus eius reiciendis quos, qui molestiae quo pariatur!
-            Laudantium id quod expedita ratione! Voluptatem libero accusantium
-            adipisci dignissimos impedit at quod doloremque eius ipsa similique
-            provident, nobis architecto quasi expedita eum animi ut nemo dolores
-            magni beatae sunt amet odit veniam repellendus. Temporibus. Commodi,
-            possimus molestias blanditiis libero ratione placeat expedita odio
-            sapiente tempore ullam quis atque maxime asperiores dicta voluptas,
-            minus ab, quaerat accusamus error. Expedita provident a numquam
-            blanditiis dolorum atque? Distinctio tenetur minus libero aliquid
-            perferendis commodi amet optio odio nam modi provident dicta tempore
-            explicabo assumenda odit, officia quae ipsa? Vero natus, aliquam
-            tempora recusandae magnam ducimus soluta qui. Doloribus eius officia
-            animi hic, fugiat nobis natus, nemo expedita labore perferendis
-            voluptates cumque ea tempora dolore illo. Reprehenderit perspiciatis
-            illum laboriosam doloremque voluptatem repellat ipsam hic quia quis.
-            Facilis!
-          </div>
-        </div> -->
+      <div class="row" id="results-page">
     </main>
-
     <footer></footer>
-
-    <script src="https://api.mqcdn.com/sdk/place-search-js/v1.0.0/place-search.js"></script>
-
-
-    <script src="./assets/JS/script.js"></script>
+    <!-- <script src="https://api.mqcdn.com/sdk/place-search-js/v1.0.0/place-search.js"></script> -->
+    <script src="/public/js/script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <!-- <script src="./assets/style.css"></script> -->
-
-
   </body>
 </html>
