--- a/public/css/style.css
+++ b/public/css/style.css
@@ -149,7 +149,7 @@ body {
             .history{
             }
 #hero {
-    background-image: url(/public/img/background.jpg);
+    /* background-image: url(img/background.jpg); */
     height: 100vh;
     max-height: 100vh;
     width: 100vw;
