--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,8 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Delicious+Handrawn&family=Fruktur&family=Gochi+Hand&family=Lily+Script+One&family=Montserrat:wght@500&display=swap"
 rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+rel="stylesheet"> -->
     <!-- materialize css -->
     <link
       type="text/css"
